--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -749,7 +749,7 @@
                 <section class="c-section Locker"></section>
 
                 <!-- 風險屬性 & 資產配置 -->
-                <div class="c-section">
+                <div class="c-section" id="tab1RiskAsset">
                     <div class="c-section">
                         <div class="l-calcCharts">
                             <div class="l-calcCharts__item">
@@ -937,7 +937,7 @@
                 <section class="c-section Locker"></section>
 
                 <!-- 風險屬性 & 資產配置 -->
-                <div class="c-section">
+                <div class="c-section" id="tab2RiskAsset">
                     <div class="c-section">
                         <div class="l-calcCharts">
                             <div class="l-calcCharts__item">
@@ -1125,7 +1125,7 @@
                 <section class="c-section Locker"></section>
 
                 <!-- 風險屬性 & 資產配置 -->
-                <div class="c-section">
+                <div class="c-section" id="tab3RiskAsset">
                     <div class="c-section">
                         <div class="l-calcCharts">
                             <div class="l-calcCharts__item">
@@ -1313,7 +1313,7 @@
                 <section class="c-section Locker"></section>
 
                 <!-- 風險屬性 & 資產配置 -->
-                <div class="c-section">
+                <div class="c-section" id="tab4RiskAsset">
                     <div class="c-section">
                         <div class="l-calcCharts">
                             <div class="l-calcCharts__item">
@@ -1577,36 +1577,6 @@
 <script>
     (function ($, window, document, undefined) {
         document.addEventListener("DOMContentLoaded", function () {
-            if (SC_DATA.IsLoggedIn) {
-
-                if (SC_DATA.Gender == 1) {
-                    $('#lifeExpectancy').attr("value", 76);
-                    $('#lifeExpectancy').trigger("change");
-                }
-
-                $('[data-save="true"]').removeClass('u-hidden');
-
-                if (SC_DATA.Risk == undefined) {
-                    RiskHandler().then((data) => {
-                        SC_DATA.Risk = data.risk;
-                    });
-                }
-
-                if (SC_DATA.WebBankId !== "") {
-                    if (SC_DATA.Risk !== undefined) {
-
-                        UpdateRiskAttributesContent(SC_DATA.Risk);
-
-                    } else {
-                        renderNotRisk();
-                    }
-                } else {
-                    renderTPPLogin();
-                }
-            } else {
-                renderNotLogin();
-            }
-
             var resultHasGap;
             var description, readingbar = [], earningsChart = [], chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [], chartsAssets = [];
             var hasRenderedRecommendations = false;
@@ -1644,6 +1614,32 @@
                     text: '@Model.CurrencyAllocationText'
                 }
             };
+
+            if (SC_DATA.IsLoggedIn) {
+
+                if (SC_DATA.Gender == 1) {
+                    $('#lifeExpectancy').attr("value", 76);
+                    $('#lifeExpectancy').trigger("change");
+                }
+
+                $('[data-save="true"]').removeClass('u-hidden');
+
+                if (SC_DATA.Risk == undefined) {
+                    RiskHandler().then((data) => {
+                        SC_DATA.Risk = data.risk;
+                    });
+                }
+
+                if (SC_DATA.Risk !== undefined && SC_DATA.PlatForm == 'WebBank') {
+
+                    UpdateRiskAttributesContent(SC_DATA.Risk);
+
+                } else if (SC_DATA.Risk == undefined && SC_DATA.PlatForm == 'WebBank') {
+                    renderNotRisk();
+                }
+            } else {
+                renderNotLogin();
+            }
 
             //#region 預計幾年後達成目標綁定事件
             let $sliderYear = $('[data-slider-id="year"]').get(0),
@@ -2262,7 +2258,8 @@
                     ChartsRevenues: chartsRevenues,
                     ChartsRewards: chartsRewards,
                     ChartsRewardsCategories: chartsRewardsCategories,
-                    __RequestVerificationToken: token
+                    __RequestVerificationToken: token,
+                    pageUrl: window.location.pathname + window.location.search
                 };
 
                 $.ajax({
@@ -2273,7 +2270,12 @@
                         xhr.setRequestHeader("RequestVerificationToken", token);
                     }
                 }).done(function (data, textStatus, jqXHR) {
-                    window.toast('已儲存');
+                    if (data && data.success) {
+                        window.toast('已儲存');
+                    } else if (!data.success && data.block) {
+                        window.VerifyLoginRedirctToHome(data.success);
+                        return;
+                    }
                 }).fail(function (jqXHR, textStatus, errorThrown) {
                     console.log(errorThrown);
                 }).always(function () {
@@ -2286,7 +2288,12 @@
                 e.preventDefault();
 
                 RiskHandler().then((data) => {
-                    unlockRecommendations(data);
+                    if (data && data.success) {
+                        unlockRecommendations(data);
+                    } else if (!data.success && data.block) {
+                        window.VerifyLoginRedirctToHome(data.success);
+                        return;
+                    }
                 });
             });
             //#endregion
@@ -2852,13 +2859,17 @@
                     let eventEtf = $('[data-tab-panel-id="tab-1"] .recommendedETF .swiper-wrapper');
                     let eventStringEtf = '[data-tab-panel-id="tab-1"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, years, monthlyInvestment, amountPrepared, targetAmount, pension, expectedRoi);
-                } else {
+                } else if (!SC_DATA.IsLoggedIn || (SC_DATA.PlatForm == 'WebBank' && SC_DATA.Risk == undefined)) {
                     if (!hasRenderedRecommendations) {
                         renderRecommendedFunds(9);
                         renderRecommendedETFs(3);
                         renderRecommendedProductChart();
                         hasRenderedRecommendations = true;
                     }
+                } else if (SC_DATA.PlatForm == 'Line' || SC_DATA.PlatForm == 'FaceBook') {
+                    $('#tab1RiskAsset').addClass('u-hidden');
+                    $('#tab1Fund').addClass('u-hidden');
+                    $('#tab1ETF').addClass('u-hidden');
                 }
             }
             //#endregion
@@ -2936,6 +2947,11 @@
                     let eventEtf = $('[data-tab-panel-id="tab-2"] .recommendedETF .swiper-wrapper');
                     let eventStringEtf = '[data-tab-panel-id="tab-2"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, years, result, amountPrepared, targetAmount, pension, expectedRoi);
+
+                } else if (SC_DATA.PlatForm == 'Line' || SC_DATA.PlatForm == 'FaceBook') {
+                    $('#tab2RiskAsset').addClass('u-hidden');
+                    $('#tab2Fund').addClass('u-hidden');
+                    $('#tab2ETF').addClass('u-hidden');
                 }
             }
             //#endregion
@@ -3013,6 +3029,11 @@
                     let eventEtf = $('[data-tab-panel-id="tab-3"] .recommendedETF .swiper-wrapper');
                     let eventStringEtf = '[data-tab-panel-id="tab-3"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, years, monthlyInvestment, amountPrepared, targetAmount, pension, result);
+
+                } else if (SC_DATA.PlatForm == 'Line' || SC_DATA.PlatForm == 'FaceBook') {
+                    $('#tab3RiskAsset').addClass('u-hidden');
+                    $('#tab3Fund').addClass('u-hidden');
+                    $('#tab3ETF').addClass('u-hidden');
                 }
             }
             //#endregion
@@ -3089,6 +3110,11 @@
                     let eventEtf = $('[data-tab-panel-id="tab-4"] .recommendedETF .swiper-wrapper');
                     let eventStringEtf = '[data-tab-panel-id="tab-4"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, years, monthlyInvestment, amountPrepared, targetAmount, pension, expectedRoi);
+
+                } else if (SC_DATA.PlatForm == 'Line' || SC_DATA.PlatForm == 'FaceBook') {
+                    $('#tab4RiskAsset').addClass('u-hidden');
+                    $('#tab4Fund').addClass('u-hidden');
+                    $('#tab4ETF').addClass('u-hidden');
                 }
             }
             //#endregion
@@ -3599,7 +3625,8 @@
                                     <div class="c-calcLocker__icon">
                                                     <img src="${lockImg}" alt="">
                                     </div>
-                                    <div class="c-calcLocker__desc t2 t-bold">登入查看專屬推薦</div>
+                                        <div class="c-calcLocker__desc t2 t-bold">登入儲存試算結果及查看推薦商品</div>
+                                        <div class="c-calcLocker__desc" style="color:#808080">*第三方登入僅有儲存功能</div>
                                     <div class="c-calcLocker__actions">
                                         <div class="c-calcLocker__btn"><a href="#popupLogin" class="o-btn o-btn--primary o-btn--lg" data-popup="true">立即登入</a></div>
                                     </div>
@@ -3612,27 +3639,6 @@
                     type: 'inline',
                     midClick: true
                 });
-            }
-            //#endregion
-
-            //#region 判斷登入平台遮罩顯示
-            function renderTPPLogin() {
-                const TPPLoginHTML = `
-                                    <div class="c-calcLocker">
-                                        <div class="l-wrap">
-                                            <div class="c-calcLocker__icon">
-                                                            <img src="${lockImg}" alt="">
-                                            </div>
-                                            <div class="c-calcLocker__desc t2 t-bold">綁定一銀帳戶查看專屬推薦</div>
-                                            <div class="c-calcLocker__actions">
-                                                <div class="c-calcLocker__btn"><a href="https://ibank.firstbank.com.tw/NetBank/DigAMA/LandingPage/index.html" target="_blank" class="o-btn o-btn--secondary o-btn--lg" rel="noreferrer noopener">立即開戶</a></div>
-                                                            <div class="c-calcLocker__btn"><a href="#" target="_self" class="o-btn o-btn--primary o-btn--lg" data-eh="fcblogin-click">立即綁定</a></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                            `;
-                $('.Locker').append(TPPLoginHTML);
-                $('.Locker').addClass("c-section--locker");
             }
             //#endregion
 
