update: 無理財諮詢顯示預約連結

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -103,7 +103,7 @@
                                         }
                                         else
                                         {
-                                            <b>-</b>
+                                            <a href="@memberReserveUrl" target="_blank" class="o-btn o-btn--primary o-btn--thin o-btn--auto">預約線上諮詢</a>
                                         }
                                     </div>
                                 </div>
