--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -77,7 +77,7 @@
                                 <div class="c-form">
                                     <div class="c-form__title">電子信箱</div>
                                     <div class="c-form__content">
-                                        <div class="l-form is-error" id="l-form-mail">
+                                        <div class="l-form" id="l-form-mail">
                                             <div class="l-form__input">
                                                 <input id="input-email" type="email" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入電子信箱">
                                             </div>
@@ -95,7 +95,7 @@
                                 <div class="c-form">
                                     <div class="c-form__title">諮詢主題(可複選)</div>
                                     <div class="c-form__content">
-                                        <div class="l-form is-error" id="l-form-subject">
+                                        <div class="l-form" id="l-form-subject">
                                             <div class="l-form__item">
                                                 <div class="l-pickGroup l-pickGroup--form">
                                                     @if (Model.SubjectList != null)
